# dwarfOS

./: .gitignore  .gitmodules  CMakeLists.txt  DwarfOS.componentinfo.xml  DwarfOS.cproj  README.md  convertReadme.sh  version.h.in
doc/: DwarfOS.lss  DwarfSimu.simu  libc
doc/coverage_report_20240228/: CoverageLog-0.xml
dwarf-os/: ascii_helper.h  flash_helper.h  heap_management_helper.h  input_queue.h  mcu_clock.h  pgm_textfile_generator.h  readme_data.h  setup.h  stdio.h  string_repository.h  time.h  uart_helper.h  version.h
include/: ascii_helper.h  flash_helper.h  heap_management_helper.h  input_queue.h  mcu_clock.h  pgm_textfile_generator.h  setup.h  string_repository.h  string_storage.h  time.h  uart_helper.h  version.h
src/: ascii_helper.c  flash_helper.c  heap_management_helper.c  input_queue.c  main.c  mcu_clock.c  mcu_clock.h  pgm_textfile_generator.c  setup.c  setup.h  stdio.c  string_repository.c  string_repository.h  string_storage.c  string_storage.h  time.c  time.h  uart_helper.c  uart_helper.h
src/dwarfOS/: setup.c  string_repository.c  time.c  uart_helper.c
tests/: CMakeLists.txt  _ascii_helper.c  _ascii_helper.h  _input_queue.c  _string_repository.c  _time.c  _time.h  mcu_test_runner_elpm.c  time_test.c  time_test.h
tests/_include/: _string_storage.h
tests/_include/_string_repo_test/: string_repository.h
tests/_src/: _string_storage.c
tests/_src/_string_repo_test/: _string_storage.c
tests/coverage_report_20240228/: Coverage.xml  CoverageLog-0.xml  Test.xml
tests/include/: _flash_helper.h  _stdio.h  global_declarations.h  lorem_ipsum.h  unity_function_pointers.h
tests/src/: _flash_helper.c  _stdio.c  lorem_ipsum.c  unity_function_pointers.c
tests/standard-gcc/: CMakeLists.txt  _ascii_helper.c  _input_queue.c  _time.c
tests/standard-gcc/_src/: mock_flash_helper.c
tests/text-files/: action_with_indexs.c  actions.c  short_locations.c
tests/textfile-generator/: CMakeLists.txt  textfile_generator.c
